--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ nav ul {
 }
 
 .GameContainer {
-    /* background-color: aqua; */
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 50px;
 }
@@ -31,6 +31,7 @@ nav ul {
     grid-template-columns: repeat(3, 10vw);
     font-family: Impact;
 }
+
 .box {
     border: 2px solid black;
     font-size: 8vw;
@@ -39,6 +40,7 @@ nav ul {
     justify-content: center;
     align-items: center;
 }
+
 .box:hover {
     background-color: rgba(128, 128, 128, 0.35);
 }
@@ -50,28 +52,76 @@ nav ul {
 .lb0 {
     border-left: 0;
 }
+
 .rb0 {
     border-right: 0;
 }
+
 .tb0 {
     border-top: 0;
 }
+
 .bb0 {
     border-bottom: 0;
 }
 
 #reset {
-    margin:0px 25px;
+    margin: 0px 25px;
     padding: 2px 10px;
-    background-color: rgba(0, 52, 142,0.85);
+    background-color: rgba(0, 52, 142, 0.85);
     color: white;
     border: none;
     border-radius: 2px;
 }
+
 #reset:hover {
     background-color: rgb(0, 52, 142);
 }
+
 #reset:active {
     background-color: black;
     color: white;
+}
+
+
+@media screen and (max-width:800px) {
+    body {
+        margin-bottom: 100px;
+    }
+
+    nav {
+        height: 10vw;
+        font-size: 8vw;
+    }
+
+    .GameContainer {
+        flex-wrap: wrap;
+    }
+
+    .container {
+        grid-template-rows: repeat(3, 30vw);
+        grid-template-columns: repeat(3, 30vw);
+    }
+
+    .box {
+        font-size: 24vw;
+    }
+
+    .GameInfo {
+        margin-top: 20px;
+    }
+
+    .info {
+        font-size: 6vw;
+    }
+
+    .GameInfo>h1 {
+        font-size: 10vw;
+        margin: 5px 10px;
+    }
+
+    #reset {
+        height: 10vw;
+        font-size: 8vw;
+    }
 }
