--- a/style.css
+++ b/style.css
@@ -60,6 +60,11 @@ nav ul {
 .GameInfo>h1 {
     font-size: 10vw;
     margin:5px 10px;
+    margin-top: 50px;
+}
+
+.GameResult {
+    font-size: 10vw;
 }
 
 .lb0 {
@@ -80,14 +85,13 @@ nav ul {
 
 #reset {
     margin: 0px 25px;
-    padding: 2px 10px;
     background-color: rgba(0, 52, 142, 0.85);
     color: white;
     border: none;
     border-radius: 2px;
     height: 10vw;
     font-size:8vw;
-    padding:0px 5px;
+    padding:0px 20px;
 }
 
 #reset:hover {
@@ -105,6 +109,10 @@ nav ul {
         height: 10vw;
         font-size: 8vw;
     }
+    
+    .box:hover {
+        background-color: rgba(0,0,0,0);
+    }
 
 /*    .GameContainer {
         flex-wrap: wrap;
@@ -117,12 +125,9 @@ nav ul {
 
     .box {
         font-size: 21vw;
-    }*/
-    .box:hover {
-        background-color: rgba(0,0,0,0);
     }
 
-/*    .GameInfo {
+    .GameInfo {
         margin-top: 30px 15px;
         text-align:
     }
