--- a/style.css
+++ b/style.css
@@ -31,14 +31,14 @@ nav ul {
 
 .container {
     display: grid;
-    grid-template-rows: repeat(3, 25vw);
-    grid-template-columns: repeat(3, 25vw);
+    grid-template-rows: repeat(3, 15vw);
+    grid-template-columns: repeat(3, 15vw);
     font-family: Impact;
 }
 
 .box {
     border: 2px solid black;
-    font-size: 21vw;
+    font-size: 13vw;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -54,30 +54,20 @@ nav ul {
 }
 
 .GameInfo>h1 {
-    font-size: 10vw;
+    font-size: 8vw;
     margin:5px 10px;
     margin-top: 50px;
 }
 
-.GameResult {
-    font-size: 10vw;
-}
+.GameResult { font-size: 8vw; }
 
-.lb0 {
-    border-left: 0;
-}
+.lb0 { border-left: 0; }
 
-.rb0 {
-    border-right: 0;
-}
+.rb0 { border-right: 0; }
 
-.tb0 {
-    border-top: 0;
-}
+.tb0 { border-top: 0; }
 
-.bb0 {
-    border-bottom: 0;
-}
+.bb0 { border-bottom: 0; }
 
 #reset {
     margin: 0px 25px;
@@ -85,14 +75,12 @@ nav ul {
     color: white;
     border: none;
     border-radius: 2px;
-    height: 10vw;
-    font-size:8vw;
-    padding:0px 20px;
-}
+    height: 7vw;
+    font-size: 4vw;
+    padding: 0px 16px;
+    }
 
-#reset:hover {
-    background-color: rgb(0, 52, 142);
-}
+#reset:hover { background-color: rgb(0, 52, 142); }
 
 #reset:active {
     background-color: black;
@@ -106,36 +94,25 @@ nav ul {
         font-size: 8vw;
     }
 
-/*    .GameContainer {
-        flex-wrap: wrap;
-    }
-
     .container {
         grid-template-rows: repeat(3, 25vw);
         grid-template-columns: repeat(3, 25vw);
+        font-size: 21vw;
     }
 
-    .box {
-        font-size: 21vw;
+    #reset {
+    height: 10vw;
+    font-size:8vw;
+    padding:0px 20px;
     }
 
     .GameInfo {
         margin-top: 30px 15px;
-        text-align:
+        text-align: center;
     }
-
-    .info {
-        font-size: 6vw;
-    }
-
+    .info { font-size: 6vw; }
     .GameInfo>h1 {
         font-size: 10vw;
         margin: 5px 10px;
     }
-
-    #reset {
-        height: 10vw;
-        font-size: 8vw;
-        padding: 0px 5px;
-    }*/
 }
