--- a/Text-Manipulator/style.css
+++ b/Text-Manipulator/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: cursive;
     text-align: center;
   }
 
@@ -13,6 +12,7 @@
 
   h1 {
     color: rgb(222, 111, 0);
+    font-family: cursive;
   }
 
   textarea {
@@ -22,14 +22,11 @@
     min-height: 100px;
     border-width: 10px;
     border-color: rgb(222, 111, 0);
-    border-top: none transparent;
-    border-bottom: none transparent;
-    border-style: double;
-    border-bottom-right-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    border-top-left-radius: 20px;
-    background-color: rgba(187, 255, 0, 0.409);
+    border-top: none;
+    border-bottom: none;
+    border-style: solid;
+    border-radius: 20px;
+    background-color: rgba(187, 255, 0, 0.4);
     padding-left: 10px;
     color: rgb(61, 6, 47);
   }
@@ -49,26 +46,6 @@
   button:active {
     background-color: black;
     color: white;
-  }
-
-  .disk {
-    text-align: none;
-    z-index: 1;
-    float: right;
-    background-color: rgba(56, 150, 176, 0.600);
-    border: none;
-    border-bottom-left-radius: 50px;
-    height: 50px;
-    width: 50px;
-  }
-  .disk:hover {
-    background-color: rgb(56, 150, 176);
-  }
-  .disk:active {
-    background-color: rgb(56, 150, 176);
-    height: 80px;
-    width: 80px;
-    border-bottom-left-radius: 80px;
   }
 
   .footer {
