--- a/style.css
+++ b/style.css
@@ -13,34 +13,41 @@ nav {
 
 .page-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
 .container {
-    /* display: grid; */
-    border: 2px solid black;
-    border-radius: 20px;
-    width: 400px;
-    margin: 20px 10px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    width: 200px;
+    margin: 10px 5px;
     cursor: pointer;
 }
 
 .content {
-    height: 400px;
-    width: 400px;
+    height: 200px;
+    width: 200px;
     border: none;
     border-bottom: 2px solid black;
 }
 
+.content > iframe {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 100%;
+    height: 100%;
+}
+
 .description {
-    height: 100px;
-    font-size: 22px;
-    padding: 10px;
+    height: 50px;
+    font-size: 10px;
+    padding: 5px;
     font-style: italic;
 }
 
 span.title {
-    font-size: 30px;
+    font-size: 15px;
     font-style: normal;
     color: rgb(11, 11, 11);
 }
