--- a/Sudoku/style.css
+++ b/Sudoku/style.css
@@ -7,12 +7,10 @@ a{
     text-decoration: none;
 }
 
-body{
-    background-color: #e6e6e6;
-}
+body{background-color: #e6e6e6;}
 
 nav {
-    background-color: whitesmoke;
+    background-color: white;
     height: 50px;
     font-size: 45px;
     padding: 5px 10px;
@@ -22,7 +20,7 @@ nav>ul {
     list-style-type: none;
 }
 img.navImage#home {
-    padding-left: 15px;
+    padding-left: 10px;
     float: left;
     overflow: hidden;
 }
@@ -46,6 +44,7 @@ img.navImage {
     height: 50px;
     float: right;
     border: none;
+    font-size: 20px;
 }
 
 .sudoku {
@@ -76,7 +75,7 @@ div.box {
 .num-box:hover {
     cursor: pointer;
     color: black;
-    background-color: rgba(190, 190, 190, 0.25);
+    background-color: #80808040;
 }
 
 .alreadyFilled {
@@ -100,7 +99,7 @@ div.box {
 .choose:hover {
     cursor: pointer;
     color: black;
-    background-color: rgba(190, 190, 190, 0.25);
+    background-color: #80808040;
 }
 
 .br0 {
@@ -125,6 +124,7 @@ div.buttons {
 
 button {
     padding: 2px 10px;
+    margin: 10px 10px;
     background-color: #00348ed9;
     color: white;
     border: none;
@@ -163,10 +163,11 @@ div.info > ul > li {
 }
 .divFooter > ul > li >a{
     color: #4d4d4d;
-    transition: none;
+    transition: 0.4s;
 }
 .divFooter > ul > li >a:hover{
     color: #000;
+    font-size: 20px;
 }
 footer{
     border-top: 1px solid black;
@@ -189,21 +190,22 @@ footer{
     text-align: left;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 990px) {
   input#searchbar {
-    height: 20px;
-    font-size: 17px;
+    height: 50px;
+    font-size: 40px;
+    margin: 4px 0;
     padding: 0px 5px;
-    border: 0.4px solid;
-    border-radius: 0.4px;
+    border: 1px solid;
+    border-radius: 5px;
   }
   nav {
     font-size: 21px;
     padding: 2px 4px;
-    height: 25px;
+    height: 60px;
   }
   img.navImage{
-    height: 21px;
+    height: 50px;
     padding: 2px 5px;
   }
   .sudoku{
@@ -214,7 +216,7 @@ footer{
     grid-template-columns: repeat(3, 9.8vw);
     grid-template-rows: repeat(3, 9.8vw);
   }
-  .num-box{
+  .num-box , .alreadyFilled , .toFill{
     font-size: 9vw;
   }
   .choose-number{
@@ -230,11 +232,14 @@ footer{
   h2#normalHeading{
     font-size: 7vw;
   }
+  div.info{
+    width: 80%;
+  }
   div.info > ul > li{
     font-size: 3.5vw;
   }
   .divFooter > ul > li{
-    font-size: 3vw;
+    font-size: 30px;
   }
 }
 @media screen and (max-width: 360px) {
