--- a/style.css
+++ b/style.css
@@ -1,122 +1,503 @@
 * {
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    transition: 0.3s;
 }
+
 body {
-  background-color: #6c757d;
+    font-family: cursive;
+    margin: 0;
+}
+.navbar {
+    width: 100%;
+    overflow: hidden;
+    background-color: #531fff;
+    font-family: sans-serif;
+    position: fixed;
+}
+.navbar a {
+    float: right;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+.navbar a.left {
+    float: left;
+    color: white;
+}
+.navbar a:hover {
+    background-color: #ddd;
+    color: #531fff;
+}
+
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.side,
+.side2 {
+    margin-top: 45px;
+    -ms-flex: 20%;
+    flex: 20%;
+    background-color: #f1f1f1;
+    padding: 20px;
+}
+
+.side {
+    float: left;
+}
+
+.side2 {
+    float: right;
+}
+
+.main {
+    /* -ms-flex: 60%; */
+    margin-top: 45px;
+    flex: 60%;
+    background-color: white;
+    padding: 20px;
+    color: #333;
+ }
+
+.main img {
+    width: fit-content;
+    float: right;
+    margin: 10px;
+}
+.main img#horizontal-image {
+    float: none;
+    max-width: 85%;
+    display: block;
+    margin: auto;
+}
+.main img#square-image {
+    float: none;
+    max-width: 55%;
+    display: block;
+    margin: auto;
+}
+.main img#vertical-image {
+    float: right;
+    width: 20%;
+}
+.main img#massive-image {
+    width: 95%;
+}
+#normal-image {
+    width: 14vw;
+    float: none;
+    border-radius: 7vw;
+}
+#normal-image:hover{
+    width: 16vw;
+    border-radius: 8vw;
+}
+
+.footer {
+    width: 100%;
+    padding: 10px;
+    background: #ddd;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+}
+.left-footer , .right-footer{
+    display: block;
+    padding: 10px;
+    width: 45%;
+}
+.left-footer{
+    text-align: right;
+    border-right: 1px solid black;
 }
 a {
-  color: black;
-  text-decoration: none;
+    text-decoration: none;
+    color: #2600a1;
 }
-nav {
-  background-color: whitesmoke;
-  height: 50px;
-  font-size: 45px;
-  padding: 5px 10px;
+a:hover {
+    color: #531fff;
 }
-nav>ul {
-  list-style-type: none;
+
+table {
+    display: block;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: fit-content;
+    max-width: 95%;
+    border: 10px;
+    border-color: rgb(152, 152, 2);
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-style: solid;
+    border-left: none;
+    border-right: none;
 }
-nav>ul>li>span#homeText,
-img.navImage#home {
-  padding-left: 15px;
-  float: left;
-  overflow: hidden;
+th {
+    border: 0;
+    text-align: center;
+    text-transform: capitalize;
+    background-color: rgba(152, 152, 2, 0.45);
 }
-nav>ul>li>input {
-  background-color: whitesmoke;
-  margin-right: 8px;
-  width: 26%;
-  height: 45px;
-  float: right;
-  border: 2px solid grey;
-  border-radius: 5px;
-  font-size: 35px;
-  transition: 0.5s;
-  padding: 0 25px;
+td {
+    border: 0;
+    padding: 5px;
+    text-align: center;
+    background-color: rgba(152, 152, 2, 0.25);
 }
-nav>ul>li>input:hover,
-nav>ul>li>input:active {
-  border-color: black;
+caption {
+    background-color: rgba(152, 152, 2, 0.75);
 }
-img.navImage {
-  padding-right: 25px;
-  height: 50px;
-  float: right;
-  border: none;
-}
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  position: relative;
-}
-.pageBox {
-  transition: 0.5s;
-  display: block;
-  color: black;
-  font-size: 5vw;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif, Courier, monospace;
-  text-align: center;
-  text-decoration: none;
-  width: 40vw;
-  height: 25vw;
-  margin: 2vw;
-  /* position: absolute; */
-}
-.first {
-  background-color: rgb(255, 94, 0);
-}
-.second {
-  background-color: rgb(55, 0, 255);
-}
-.first:hover {
-  background-color: rgb(255, 94, 50);
-}
-.second:hover {
-  background-color: rgb(55, 0, 155);
-}
-.pageBox:hover,
-.pageBox:active,
-.pageBox:visited {
-  height: 30vw;
-  width: 45vw;
-  font-size: 6vw;
-  color: white;
-  cursor: pointer;
-}
-@media screen and (max-width: 768px) {
-  input#searchbar {
-    height: 20px;
-    font-size: 17px;
-    padding: 0px 5px;
-    border: 0.4px solid;
-    border-radius: 0.4px;
-  }
-  nav {
-    font-size: 21px;
-    padding: 2px 4px;
-    height: 25px;
-  }
-  img.navImage{
-    height: 21px;
-    padding: 2px 5px;
-  }
-  .container {
+
+div#button{
     justify-content: center;
-  }
-  div.pageBox {
-    height: 12vw;
-    width: 85vw;
-  }
-  div.pageBox:hover {
-    height: 14vw;
-    width: 85vw;
-  }
 }
-@media screen and (max-width: 360px) {
-  nav {
-    font-size: 0px;
-  }
+button {
+    padding: 2px 10px;
+    margin: 10px 10px;
+    background-color: #00348ed9;
+    color: white;
+    border: none;
+    border-radius: 2px;
+    font-size: 35px;
+    text-transform: uppercase;
+    text-decoration: solid;
+    font-family: cursive;
+    justify-self: center;
+}
+button:hover {
+    background-color: rgb(0, 52, 142);
+    border-radius: 10px;
+}
+button:active {
+    background-color: black;
+    color: #ffffff;
+}
+.btn-next {
+    float: right;
+}
+
+b,
+h3,
+h2,
+h1 {
+    text-transform: capitalize;
+    font-family: cursive;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
+}
+
+iframe {
+    width: 95%;
+    /* height: max-content; */
+    min-height: max-content;
+    font-size: inherit;
+    background-color: rgba(238, 130, 238, 0.25);
+    border: 10px;
+    border-style: solid;
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-color: rgb(112, 2, 143);
+    scrollbar-color: rgba(112, 2, 143, 0);
+}
+iframe:hover {
+    scrollbar-color: rgba(112, 2, 143), 0.5;
+}
+iframe:active {
+    scrollbar-color: rgba(112, 2, 143, 0.75);
+}
+iframe>a {
+    text-decoration: none;
+}
+
+pre {
+    background-color: rgba(0, 255, 255, 0.25);
+    padding: 10px;
+    font-family: cursive;
+    border: 10px;
+    border-style: solid;
+    border-top: none;
+    border-right: none;
+    border-bottom: none;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-color: rgb(0, 108, 141);
+    max-width: 95%;
+}
+pre#poem {
+    text-align: center;
+}
+
+textarea,
+input {
+    font-family: cursive;
+    width: 30%;
+    min-width: 50px;
+    max-width: 500px;
+    max-height: 200px;
+    background-color: rgba(188, 143, 143, 0.25);
+    border: 5px;
+    border-style: solid;
+    border-top: none;
+    border-bottom: none;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border-color: rgb(98, 68, 68);
+    padding-left: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+input.button {
+    /* display: block; */
+    width: fit-content;
+    margin-top: 5px;
+    padding: 5px;
+    margin-bottom: 5px;
+    border: none;
+    background-color: rgb(98, 68, 68);
+    color: white;
+}
+input.button:hover {
+    background-color: rgb(58, 38, 38);
+}
+input.button:active {
+    background-color: rgba(188, 143, 143, 0.25);
+    color: black;
+}
+input.choose-file {
+    width: 50%;
+    border: none;
+    background: none;
+    /* max-width: 85%; */
+}
+.link-card{
+    transition: 0.1s;
+    list-style-type: none;
+    /* overflow: hidden; */
+    border: 0 none;
+    border-radius: 10px;
+    height: 100px;
+    width: 200px;
+    background-color: #e3e3e3;
+    margin:10px 10px;
+    text-align: center;
+    line-height: 95px;
+    vertical-align: middle;
+}
+.link-card>a{
+    color: black;
+}
+.link-card:hover{
+    font-size: 20px;
+    cursor: pointer;
+}
+.side>ul>li{
+    list-style-type: none;
+    text-indent: 0;
+}
+.link-heading-text{
+    font-size: 25px;
+    font-weight: bold;
+}
+/* sudoku */
+.sudoku {
+    display: grid;
+    grid-template-columns: repeat(3, 139px);
+    grid-template-rows: repeat(3, 139px);
+    justify-content: center;
+    margin-top: 2vw;
+}
+
+div.box {
+    margin: 0px;
+    display: grid;
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(3, 33%);
+}
+
+.SudokuNumBox {
+    display: block;
+    border: 1px solid black;
+    margin: 0;
+    font-size: 30px;
+    text-align: center;
+    color: darkslategrey;
+    transition: none;
+}
+
+.SudokuNumBox:hover {
+    cursor: pointer;
+    color: black;
+    background-color: #80808040;
+}
+
+.alreadyFilled {
+    color: black;
+}
+
+.choose-number {
+    margin-top: 14px;
+    display: grid;
+    grid-template-columns: repeat(9, 10%);
+    justify-content: center;
+}
+
+.choose {
+    font-size: 32px;
+    border: 3px solid black;
+    text-align: center;
+    color: darkslategrey;
+}
+
+.choose:hover {
+    cursor: pointer;
+    color: black;
+    background-color: #80808040;
+}
+
+#normalHeading {
+    margin-bottom: 1vw;
+}
+div.textafterwin,
+div.GameInfo {
+    display: block;
+    margin: auto;
+    margin-top: 2vw;
+    padding: 20px 10px;
+    width: 445px;
+    border-radius: 10px;
+    background-color: #e3e3e3;
+}
+/* Tic Tac Toe */
+.tictactoe-container{
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3,200px);
+    grid-template-rows: repeat(3,200px);
+}
+.tictactoe-box{
+    text-align: center;
+    border: 2px solid black;
+    cursor: pointer;
+    font-size: 135px;
+    font-weight: bolder;
+}
+div.GameInfo.tictactoe{
+    text-align: center;
+    font-size: 30px;
+}
+
+div.info > ul > li {
+    list-style-position: inside;
+}
+
+.br0 {
+    border-right:0 none;
+}
+.bl0 {
+    border-left:0 none;
+}
+.bt0 {
+    border-top:0 none;
+}
+.bb0 {
+    border-bottom:0 none;
+}
+
+@media screen and (max-width:1520px) {
+    body {
+        font-size: 15px;
+    }
+
+    .side {
+        width: 20%;
+    }
+    
+    .side2 {
+        width: 20%;
+    }
+
+    .main {
+        width: 20%;
+    }
+}
+
+@media screen and (max-width: 990px) {
+    .row {
+        flex-direction: column;
+    }
+
+    .side,
+    .side2,
+    .main {
+        width: 100%;
+    }
+
+    #profile-image {
+        width: 60px;
+    }
+
+    .header {
+        font-size: 20px;
+        width: 100%;
+    }
+
+    pre {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .header h1 , .bigheading {
+        font-size: 30px;
+    }
+
+    .navbar a {
+        font-size: 10px;
+        display: block;
+        padding: 8px 9px;
+    }
+
+    #rightfloat {
+        float: none;
+        align-self: center;
+    }
+
+    .row , pre , .button {
+        font-size: 10px;
+    }
+
+    #normal-image {
+        height: 100px;
+    }
+
+    img {
+        float: none;
+        width: 95%;
+    }
+
+    pre {
+        width: 95%;
+        max-width: 95%;
+    }
+
+    textarea,input {
+        width: 60%;
+    }
+
+    iframe {
+        text-size-adjust: inherit;
+    }
 }
